--- a/style.css
+++ b/style.css
@@ -117,19 +117,24 @@
   color: white;
   font-weight: 40px;
   font-size: 20px;
-  
+
 }
-.main-div3{
+
+.main-div3 {
   display: flex;
   gap: 120px;
 }
-.main-div4{
- background-color: #20254B;
- display: flex;
- justify-content: center;
- align-items: center;
+
+.main-div4 {
+  background-color: #20254B;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  height: 400px;
 }
-.sub-div2{
+
+.sub-div2 {
   background-color: white;
   width: 240px;
   height: 125px;
@@ -137,26 +142,210 @@
   padding-top: 30px;
   padding-left: 30px;
   padding-right: 30px;
-  
-}
-.sub-div3{
-  display: flex;
-  justify-content: flex-start;
-  margin-right: 100px;
-  padding-bottom: 350px;
-}
-.img2{
-  margin-top: 90px;
-}
-.sub-div4{
-  display: flex;
-  justify-content: flex-start;
-  /* margin-top: 50px;
-  margin-right: 200px; */
-}
-.sub-div5{
-  display: flex;
-  justify-content: flex-start;
+
 }
 
+.sub-div3 {
+  display: flex;
+  justify-content: flex-start;
+  padding-bottom: 200px;
+}
 
+.sub-div4 {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 50px;
+}
+
+.sub-div5 {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-bottom: 100px;
+}
+
+.paragraph4 {
+  background-color: rgba(255, 255, 255, 0.192);
+  width: 230px;
+  height: 40px;
+  border-radius: 30px;
+  padding-top: 10px;
+  padding-left: 60px;
+  color: white;
+  margin-top: 50px;
+}
+
+.heading1 {
+  text-align: center;
+  margin-top: 50px;
+  font-size: 40px;
+}
+
+.hover-link {
+  display: flex;
+  justify-content: center;
+  gap: 80px;
+}
+
+.paragraph5 {
+  width: 200px;
+  height: 40px;
+  margin-top: 30px;
+  color: black;
+  padding-top: 20px;
+  padding-left: 10px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.paragraph5:hover {
+  background-color: #3C3B48;
+  color: white;
+}
+
+.main-div6 {
+  background-color: #F2F3F7;
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+  gap: 50px;
+  height: 500px;
+}
+
+.paragraph6 {
+  color: #3C58C2;
+}
+
+.heading2 {
+  font-size: 36px;
+  color: #20254B;
+}
+
+.img5 {
+  height: 400px;
+  width: 800px;
+}
+
+.main-div7 {
+  background-color: #3A384F;
+}
+
+.heading3 {
+  color: white;
+  font-size: 36px;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.paragraph7 {
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 10px;
+}
+
+.main-div8 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 80px;
+}
+
+.sub-div8 {
+  width: 550px;
+  height: 600px;
+  background-color: #2D4CBE;
+  margin-top: 200px;
+  position: relative;
+
+}
+
+.sub-div9 {
+  width: 550px;
+  height: 650px;
+  background-color: #222B6D;
+  margin-top: 50px;
+  position: relative;
+}
+
+.img6 {
+  position: absolute;
+  bottom: 250px;
+  left: 50px;
+}
+
+.img7 {
+  position: absolute;
+  bottom: 250px;
+  left: 60px;
+}
+
+.paragraph8 {
+  position: absolute;
+  top: 450px;
+  left: 80px;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
+.paragraph9{
+  position: absolute;
+  top: 500px;
+  left: 80px;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+}
+.paragraph10{
+  position: absolute;
+  top: 530px;
+  left: 80px;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+}
+.main-div9{
+ background-color: #F2F3F7;
+ width: 1000;
+}
+.heading4{
+  text-align: center;
+  padding-top: 50px;
+  font-size: 44px;
+}
+.paragraph11{
+text-align: center;
+font-size: 20px;
+}
+.sub-div10{
+  display: flex;
+  justify-content: center;
+}
+.img8{
+  width: 180px;
+  height: 70px;
+  margin-top: 150px;
+}
+.img9{
+  margin-top: 100px;
+  width: 200px;
+  height: 150px;
+}
+.paragraph12{
+  text-align: center;
+}
+.main-div10{
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  gap: 100px
+  ;
+}
+.heading5{
+  margin-top: 50px;
+}
+.paragraph13{
+  margin-top: 50px;
+}
+.img10{
+  margin-top: 50px;
+}
